<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.7">
  <DUT Name="ST_EventDefinition" Id="{abb9c617-5f0d-430b-8f5a-2b7f281d0205}">
    <Declaration><![CDATA[//==================================================================================================
//							Beckhoff Automation Poland
//									23.05.2017
//	Struktura zawierajaca definicje zdarzenia
// 	v1.0	|| TC v 3.1.4020.32		|| - pierwsza wersja
//==================================================================================================
TYPE ST_EventDefinition :
STRUCT
	dwClass									: DWORD;
	dwParam									: DWORD;
	wsMessage								: WSTRING(80);
	bActive									: BOOL;	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>