<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4022.6">
  <DUT Name="ST_EventHistoricalSimplePersistent" Id="{515f2b07-78eb-4a05-880b-41f9dbd279f8}">
    <Declaration><![CDATA[//==================================================================================================
//							Beckhoff Automation Poland
//									23.05.2017
//	Struktura zawierajaca zane do przechowania zdarzenia w pamieci
// 	v1.0	|| TC v 3.1.4020.32		|| - pierwsza wersja
//==================================================================================================
TYPE ST_EventHistoricalSimplePersistent :
STRUCT
	dwID									: DWORD;
	dwParam									: DWORD;
	dwClass									: DWORD;
	dtDateBegin								: DT;
	dtDateEnd								: DT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>